cmd/connclose/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
  labels:
    app.kubernetes.io/name: bot
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bot
  template:
    metadata:
      labels:
        app: bot
        app.kubernetes.io/name: bot
    spec:
      containers:
        - name: bot
          image: connclose:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 500m
              memory: 128M
            limits:
              cpu: 1000m
              memory: 256M
