cmd/connclose/network.allow.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: telegram
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bot
  egress:
    - # telegram datacenters list
      # generated by cmd/dcsidr
      toCIDRSet:
        - cidr: 149.154.175.59/32
        - cidr: 149.154.175.53/32
        - cidr: 2001:b28:f23d:f001::a/128
        - cidr: 149.154.167.50/32
        - cidr: 149.154.167.51/32
        - cidr: 149.154.167.151/32
        - cidr: 2001:67c:4e8:f002::a/128
        - cidr: 2001:67c:4e8:f002::b/128
        - cidr: 149.154.175.100/32
        - cidr: 2001:b28:f23d:f003::a/128
        - cidr: 149.154.167.91/32
        - cidr: 2001:67c:4e8:f004::a/128
        - cidr: 149.154.166.120/32
        - cidr: 2001:67c:4e8:f004::b/128
        - cidr: 2001:b28:f23f:f005::a/128
        - cidr: 91.108.56.173/32
      toPorts:
        - ports:
            - port: "443"
