cmd/connclose/network.deny.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: telegram
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bot
  # None.
  egress: []
